plugins {
    id 'java-library'
    id "com.vanniktech.maven.publish" version "0.34.0"
}

version = '1.0.0'
group = 'dev.ingon'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'dev.ingon', name: 'json-zero', version: '1.0.2'
    
    testImplementation 'junit:junit:4.12'
}

mavenPublishing {
  coordinates("dev.ingon", "opvaultj", "1.0.0")

  pom {
    name = "opvaultj"
    description = "A library to parse 1password opvault format"
    inceptionYear = "2020"
    url = "https://github.com/ingon/opvaultj/"
    licenses {
      license {
        name = "MIT License"
        url = "http://www.opensource.org/licenses/mit-license.php"
      }
    }
    developers {
      developer {
        id = "ingon"
        name = "Nikolay Petrov"
        url = "https://github.com/ingon/"
      }
    }
    scm {
      url = "https://github.com/ingon/opvaultj/"
      connection = "scm:git:git://github.com/ingon/opvaultj.git"
      developerConnection = "scm:git:ssh://git@github.com/ingon/opvaultj.git"
    }
  }

  publishToMavenCentral()

  signAllPublications()
}
